--- a/index.html
+++ b/index.html
@@ -15,39 +15,115 @@
 <body>
     <!---------------------------- start header section ------------->    
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Tech EDU</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Courses</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Coupons</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Success</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                </ul>                  
-                  <button class="d-flex btn btn-outline-success" type="submit">Register Now</button>
+        <section>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">Tech EDU</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Courses</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Coupons</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Success</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                      </li>
+                    </ul>                  
+                      <button class="d-flex btn btn-outline-success" type="submit">Register Now</button>
+                  </div>
+                </div>
+              </nav>
+        </section>
+<!--------------------------- Top slider start -------------------------->
+        <section class="my-5">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
-            </div>
-          </nav>
-<!-- Top slider start -->
+        </section>  
 
 
     </header>
 <!--------------- end header section ------------------>
+<!------------------------ start main section ---------------------->
+<main class="container text-center my-5">
+<div class="row gx-4">
+    <div class="tedu-single-courses col-lg-6 col-12">
+        <div class="d-flex border rounded">
+            <div><img src="images/course/course-1.png" alt=""></div>
+        <div class="ps-2 text-start">
+            <h4>Fundamental of UI/UX Design</h4>
+            <p>By enrolling in this course you will learn basic of UI/UX Design. You'll look like a superstar designer, even if you're a beginner!</p>
+            <strong><p class="text-info">Price: $25</p></strong>
+        </div>
+        </div>
+
+    </div>
+    <div class="tedu-single-courses col-lg-6 col-12">
+        <div class="d-flex border rounded">
+            <div><img src="images/course/course-2.png" alt=""></div>
+            <div class="ps-2 text-start">
+            <h4>Javascript: From Zero to Expert!</h4>
+            <p>The modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory. Many courses in one!</p>
+            <strong><p class="text-info">Price: $40</p></strong>
+        </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+
+</main>
+
+
+<!----------------------- end main section ------------------------->
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
