--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech EDU</title>
+    <title>Tech Edu</title>
     <!-- link up google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
         <section>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Tech EDU</a>
+                  <a class="navbar-brand" href="#">Tech Edu</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -118,12 +118,12 @@
 
 <!------------------------- start register section ----------------------->
 <section class="my-5">
-    <div class="d-flex justify-content-center align-items-center bg-info" style="height: 200px;">
-        <div>
-            <h3>Ready to Join</h3>
+    <div class="d-flex flex-column flex-lg-row align-items-center bg-info rounded">
+        <div class="p-5 text-white text-start">
+            <h3>Ready to Join?</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dolorem quaerat quas, minima totam libero.</p>
         </div>
-        <div>
+        <div class="p-5">
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
   
@@ -162,14 +162,66 @@
         </div>
     </div>
 </section>
-
+<!-- faq section -->
+<section>
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <strong>Difference between Flexbox and Grid?</strong>
+            </button>
+          </h2>
+          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p>I will write this answer later i dont know what will nbe cottect answer.I will write this answer later i dont know what will nbe cottect answer. I will write this answer later i dont know what will nbe cottect answer</p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
+<!-- trust section -->
+<section class="my-5 d-none d-lg-block">
+    <h2>Trusted by Over 500+ companies</h2>
+    <div class="trust-comp-logo pt-4">
+        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-1.png" alt="">
+        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-2.png" alt="">
+        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-3.png" alt="">
+        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-4.png" alt="">
+        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-5.png" alt="">
+        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-6.png" alt="">
+    </div>
+</section>
 
 
 </main>
-
-
-<!----------------------- end main section ------------------------->
-
+<!----------------------- start footer section ------------------------->
+<footer class="bg-black">
+<h3>Tech Edu</h3>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
 </body>
