--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Edu</title>
-    <!-- link up google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap" rel="stylesheet">
 <!-- link up bootstrap cdn -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -40,7 +36,6 @@
                         <a class="nav-link" href="#">About</a>
                       </li>
                     </ul>                  
-                      <button class="d-flex btn btn-outline-success" type="submit">Register Now</button>
                   </div>
                 </div>
               </nav>
@@ -90,134 +85,8 @@
 
     </header>
 <!--------------- end header section ------------------>
-<!------------------------ start courses section ---------------------->
-<main class="container text-center my-5">
-<section class="row gx-lg-4 gy-4 gy-lg-0">
-    <div class="tedu-single-courses col-lg-6 col-12">
-        <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-1.png" alt=""></div>
-        <div class="ps-2 text-start">
-            <h5>Fundamental of UI/UX Design</h5>
-            <small>By enrolling in this course you will learn basic of UI/UX Design. You'll look like a superstar designer, even if you're a beginner!</small>
-            <strong><p class="text-info">Price: $25</p></strong>
-        </div>
-        </div>
+<main></main>
 
-    </div>
-    <div class="tedu-single-courses col-lg-6 col-12">
-        <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-2.png" alt=""></div>
-            <div class="ps-2 text-start">
-            <h5>Javascript: From Zero to Expert!</h5>
-            <small>The modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory. Many courses in one!</small>
-            <strong><p class="text-info">Price: $40</p></strong>
-        </div>
-        </div>
-    </div>
-</section>
-
-<!------------------------- start register section ----------------------->
-<section class="my-5">
-    <div class="d-flex flex-column flex-lg-row align-items-center bg-info rounded">
-        <div class="p-5 text-white text-start">
-            <h3>Ready to Join?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dolorem quaerat quas, minima totam libero.</p>
-        </div>
-        <div class="p-5">
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Register to Enroll</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <!-- modal form  -->
-        <div class="modal-body">
-            <div class="row gx-5 gy-5">
-                <div class="col-6">
-                  <input type="text" class="form-control" placeholder="First name">
-                </div>
-                <div class="col-6">
-                  <input type="text" class="form-control" placeholder="Last name">
-                </div>
-                <div class="col-12">
-                    <input type="email" class="form-control" placeholder="Your e-mail">
-                  </div>
-                  <div class="col-12">
-                    <input type="password" class="form-control" placeholder="Password">
-                  </div>
-              </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Register</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>  
-        </div>
-    </div>
-</section>
-<!-- faq section -->
-<section>
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              <strong>Difference between Flexbox and Grid?</strong>
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <p>I will write this answer later i dont know what will nbe cottect answer.I will write this answer later i dont know what will nbe cottect answer. I will write this answer later i dont know what will nbe cottect answer</p>
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Accordion Item #2
-            </button>
-          </h2>
-          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-            </div>
-          </div>
-        </div>
-      </div>
-</section>
-<!-- trust section -->
-<section class="my-5 d-none d-lg-block">
-    <h2>Trusted by Over 500+ companies</h2>
-    <div class="trust-comp-logo pt-4">
-        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-1.png" alt="">
-        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-2.png" alt="">
-        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-3.png" alt="">
-        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-4.png" alt="">
-        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-5.png" alt="">
-        <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-6.png" alt="">
-    </div>
-</section>
-
-
-</main>
 <!----------------------- start footer section ------------------------->
 <footer class="bg-black">
 <h3>Tech Edu</h3>
