done courses section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bd Edu</title>
+    <title>Tech Learn</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <section>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Tech Edu</a>
+                  <a class="navbar-brand" href="#">Tech learn</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -23,7 +23,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a class="nav-link" href="#our-courses">Courses</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Coupons</a>
@@ -34,7 +34,8 @@
                       <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
                       </li>
-                    </ul>                  
+                    </ul>
+                    <a href="#register-section"><button class="btn btn-outline-info fw-bold" type="submit">Register</button></a>                 
                   </div>
                 </div>
               </nav>
@@ -85,8 +86,10 @@
     </header>
 <!--------------- end header section ------------------>
 <!------------------------ start courses section ---------------------->
-<main class="container text-center my-5">
-<section class="row gx-lg-4 gy-4 gy-lg-0">
+<main class="container text-center my-5" id="our-courses">
+  <h2 class="pt-5">Explore Our Popular Courses</h2>
+  <p class="pb-5">Learn more about our courses contents and requirements. You will also get deatails about our course Instructors.</p>
+<section class="row gx-lg-4 gy-4">
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
             <div><img src="images/course/course-1.png" alt=""></div>
@@ -108,10 +111,50 @@
         </div>
         </div>
     </div>
+    <div class="tedu-single-courses col-lg-6 col-12">
+        <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
+            <div><img src="images/course/course-3.png" alt=""></div>
+            <div class="ps-2 text-start">
+            <h5>Fullstack Web Development</h5>
+            <small>Become a Full-Stack Web Designer in 2022 - Learn Everything from Web Design Fundamentals to Front-End Web Development</small>
+            <strong><p class="text-info">Price: $60</p></strong>
+        </div>
+        </div>
+    </div>
+    <div class="tedu-single-courses col-lg-6 col-12">
+        <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
+            <div><img src="images/course/course-4.png" alt=""></div>
+            <div class="ps-2 text-start">
+            <h5>Digital Marketing A to Z</h5>
+            <small>Learn Digital Marketing from A to Z With A Step-By-Step Workbook & Action Plan To Boost Your Career in 2022!</small>
+            <strong><p class="text-info">Price: $30</p></strong>
+        </div>
+        </div>
+    </div>
+    <div class="tedu-single-courses col-lg-6 col-12">
+        <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
+            <div><img src="images/course/course-5.png" alt=""></div>
+            <div class="ps-2 text-start">
+            <h5>Basic of Pofessional Photography</h5>
+            <small>The Best Online Professional Photography Class: Learn How to Take Amazing Photos for Beginners & Advanced Photographers.</small>
+            <strong><p class="text-info">Price: $15</p></strong>
+        </div>
+        </div>
+    </div>
+    <div class="tedu-single-courses col-lg-6 col-12">
+        <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
+            <div><img src="images/course/course-6.png" alt=""></div>
+            <div class="ps-2 text-start">
+            <h5>Moton Graphics in After Effects</h5>
+            <small>Learn Beginner to Advanced Adobe After Effects CC: Motion Graphics, Kinetic Typography, Visual Effects VFX, Animation+</small>
+            <strong><p class="text-info">Price: $40</p></strong>
+        </div>
+        </div>
+    </div>
 </section>
 
 <!------------------------- start register section ----------------------->
-<section class="my-5">
+<section class="my-5" id="register-section">
     <div class="d-flex flex-column flex-lg-row align-items-center bg-info rounded">
         <div class="p-5 text-white text-start">
             <h3>Ready to Join?</h3>
