faq section done

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
             <small>Learn Beginner to Advanced Adobe After Effects CC: Motion Graphics, Kinetic Typography, Visual Effects VFX, Animation+</small>
             <strong><p class="text-info">Price: $40</p></strong>
         </div>
-        </div>
+         </div>
     </div>
+    <a href=""><button class="btn btn-info mt-3 text-center fw-bold text-white">Explore More Courses</button></a>
 </section>
 
 <!------------------------- start register section ----------------------->
@@ -199,48 +200,60 @@
         </div>
     </div>
 </section>
-<!-- faq section -->
+<!---------------------------- faq section ------------------------->
 <section>
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              <strong>Difference between Flexbox and Grid?</strong>
+              <p class="fw-bold">What is difference between Flexbox and Grid?</p>
             </button>
           </h2>
           <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <p>I will write this answer later i dont know what will nbe cottect answer.I will write this answer later i dont know what will nbe cottect answer. I will write this answer later i dont know what will nbe cottect answer</p>
+              <p class="text-start">Flexbox used for One dimensional layout - either a row or a column. Grid used for two-dimensional layout - rows, and columns at the same time.</p>
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Accordion Item #2
+              <p class="fw-bold">Difference between Bootstrap and Tailwind CSS?</p>
             </button>
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <p class="text-start">Bootstrap is pre-styled responsive, mobile-first components CSS framework; but Tailwind is utility-first CSS framework. </p>
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Accordion Item #3
+              <p class="fw-bold">What is CSS box model?</p>
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <p class="text-start">The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content. It is a fundamental concept for the composition of HTML webpages.</p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              <p class="fw-bold">What is Semantic Tags in HTML?</p>
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <p class="text-start">Semantic tags are HTML markup tags that clearly describes its meaning to both the browser and the developer. Like; "header" tag defines a header for a web page. "section" tag defines a section in a web page.</p>
             </div>
           </div>
         </div>
       </div>
 </section>
-<!-- trust section -->
+<!-------------------------- trust section ------------------------>
 <section class="my-5 d-none d-lg-block">
     <h2>Trusted by Over 500+ companies</h2>
     <div class="trust-comp-logo pt-4">
