--- a/index.html
+++ b/index.html
@@ -49,23 +49,23 @@
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                  <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="images/cover/cover-1.png" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-item active carousel-img-styles" data-bs-interval="10000">
+                    <img src="images/cover/cover-1.png" class="d-block img-fluid" alt="">
+                    <div class="carousel-caption">
                       <h5>First slide label</h5>
                       <p>Some representative placeholder content for the first slide.</p>
                     </div>
                   </div>
-                  <div class="carousel-item" data-bs-interval="2000">
-                    <img src="images/cover/cover-2.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-item carousel-img-styles" data-bs-interval="2000">
+                    <img src="images/cover/cover-2.jpg" class="d-block img-fluid" alt="">
+                    <div class="carousel-caption">
                       <h5>Second slide label</h5>
                       <p>Some representative placeholder content for the second slide.</p>
                     </div>
                   </div>
-                  <div class="carousel-item">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                  <div class="carousel-item carousel-img-styles">
+                    <img src="images/cover/cover-3.jpg" class="d-block img-fluid" alt="">
+                    <div class="carousel-caption">
                       <h5>Third slide label</h5>
                       <p>Some representative placeholder content for the third slide.</p>
                     </div>
