--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Learn</title>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap" rel="stylesheet">
+<!-- bootstrap cdn -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<!-- custom style sheet -->
+<link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <!---------------------------- start header section ------------->    
@@ -13,12 +21,12 @@
         <section>
             <nav class="navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Tech learn</a>
+                  <a class="navbar-brand fs-4 fw-bold text-primary" href="#">TECH LEARN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
@@ -43,31 +51,29 @@
 <!--------------------------- Top slider start -------------------------->
         <section class="my-5">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active carousel-img-styles" data-bs-interval="10000">
                     <img src="images/cover/cover-1.png" class="d-block img-fluid" alt="">
-                    <div class="carousel-caption">
-                      <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-caption slider-content bg-dark bg-opacity-50 text-white">
+                      <h2>Get Started Digital Learning with US</h2>
+                      <p>Start your digital learning journey with us. We provide best learning materials.</p>
+                      <a href=""><button class="btn btn-info fw-bold text-white">Get Started</button></a>
                     </div>
                   </div>
                   <div class="carousel-item carousel-img-styles" data-bs-interval="2000">
                     <img src="images/cover/cover-2.jpg" class="d-block img-fluid" alt="">
-                    <div class="carousel-caption">
-                      <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-caption slider-content bg-dark bg-opacity-50 text-white">
+                      <h2>Enroll to Shine your Future</h2>
+                      <p>By enrolling in our best picked courses it will smooth your carrer path.</p>
+                      <a href=""><button class="btn btn-info fw-bold text-white">Enroll Now</button></a>
                     </div>
                   </div>
                   <div class="carousel-item carousel-img-styles">
                     <img src="images/cover/cover-3.jpg" class="d-block img-fluid" alt="">
-                    <div class="carousel-caption">
-                      <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-caption slider-content bg-dark bg-opacity-50 text-white">
+                      <h2>Explore Our Courses</h2>
+                      <p>We offer best learning environment. With our pro Instructors you will learn fast.</p>
+                      <a href=""><button class="btn btn-info fw-bold text-white">Explore Now</button></a>
                     </div>
                   </div>
                 </div>
@@ -202,6 +208,10 @@
 </section>
 <!---------------------------- faq section ------------------------->
 <section>
+  <div>
+    <h2>Frequently Asked Questions</h2>
+    <p>Got a question? Here we answer some frequently asked question can strom your mind!</p>
+  </div>
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
