--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Learn</title>
     <!-- google font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap" rel="stylesheet">
+<!-- fontawesome kit -->
+<script src="https://kit.fontawesome.com/2f62320c49.js" crossorigin="anonymous"></script>
 <!-- bootstrap cdn -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 <!-- custom style sheet -->
@@ -279,9 +281,14 @@
 
 </main>
 <!----------------------- start footer section ------------------------->
-<footer class="bg-black">
-<h3>Tech Edu</h3>
-<div class="social icons"></div>
+<footer class="text-center bg-dark text-white py-5">
+<h2 class="fs-2 fw-bold">Tech Learn</h2>
+<p>House#12, Section#7, Gulshan <br> Dhaka, Bangladesh</p>
+<div>
+  <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook pe-3 text-white fs-3"></i></a>
+  <a href="https://twitter.com/"><i class="fa-brands fa-twitter pe-3 text-white fs-3 "></i></a>
+  <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin text-white fs-3 "></i></a>
+</div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
