--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 <!------------------------- start register section ----------------------->
 <section class="my-5" id="register-section">
     <div class="d-flex flex-column flex-lg-row align-items-center bg-info rounded">
-        <div class="p-5 text-white text-start">
+        <div class="pb-0 pt-5 px-5 p-lg-5 text-white text-start">
             <h3>Ready to Join?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo dolorem quaerat quas, minima totam libero.</p>
+            <p>Let's Join by clicking Register button and start exploring the Digital world.</p>
         </div>
-        <div class="p-5">
+        <div class="pb-5 p-lg-5">
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Register Now</button>
   
@@ -208,6 +208,39 @@
         </div>
     </div>
 </section>
+<!-------------------- Successful students section ---------------------->
+<section class="my-5">
+  <h2 class="my-5">Meet Our Successful Students</h2>
+  <div class="text-center">
+    <div class="row gy-5">
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="border rounded"><img class="img-fluid" src="images/student/student-1.png" alt="">
+         <h5>Syed Hasan</h5>
+         <p>UI/UX Designer</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="border rounded"><img class="img-fluid" src="images/student/student-2.png" alt="">
+          <h5>Olivia Samantha</h5>
+          <p>Full Stack Web Developer</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="border rounded"><img class="img-fluid" src="images/student/student-3.png" alt="">
+          <h5>Thomas Joe</h5>
+          <p>Digital Marketing Expert</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="border rounded"><img class="img-fluid" src="images/student/student-4.png" alt="">
+          <h5>Ava Megan</h5>
+          <p>Motion Graphic Expert</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!---------------------------- faq section ------------------------->
 <section>
   <div>
@@ -277,8 +310,6 @@
         <img style="width: 150px; height: auto; padding: 0 20px;" src="images/company/company-6.png" alt="">
     </div>
 </section>
-
-
 </main>
 <!----------------------- start footer section ------------------------->
 <footer class="text-center bg-dark text-white py-5">
