--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section>
             <nav class="navbar navbar-expand-lg bg-light fixed-top">
                 <div class="container-fluid">
-                  <a class="navbar-brand fs-4 fw-bold text-primary" href="#">TECH LEARN</a>
+                  <a class="navbar-brand fs-4 fw-bold text-primary ms-5" href="#">TECH LEARN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#">About</a>
                       </li>
                     </ul>
-                    <a href="#register-section"><button class="btn btn-outline-info fw-bold" type="submit">Register</button></a>                 
+                    <a href="#register-section"><button class="btn btn-outline-info fw-bold me-5" type="submit">Register</button></a>                 
                   </div>
                 </div>
               </nav>
