course image mobile view updated

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section class="row gx-lg-4 gy-4">
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-1.png" alt=""></div>
+            <div><img class="img-fluid w-100" src="images/course/course-1.png" alt=""></div>
         <div class="ps-2 text-start">
             <h5>Fundamental of UI/UX Design</h5>
             <small>By enrolling in this course you will learn basic of UI/UX Design. You'll look like a superstar designer, even if you're a beginner!</small>
@@ -111,7 +111,7 @@
     </div>
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-2.png" alt=""></div>
+            <div><img class="img-fluid w-100" src="images/course/course-2.png" alt=""></div>
             <div class="ps-2 text-start">
             <h5>Javascript: From Zero to Expert!</h5>
             <small>The modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory. Many courses in one!</small>
@@ -121,7 +121,7 @@
     </div>
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-3.png" alt=""></div>
+            <div><img class="img-fluid w-100" src="images/course/course-3.png" alt=""></div>
             <div class="ps-2 text-start">
             <h5>Fullstack Web Development</h5>
             <small>Become a Full-Stack Web Designer in 2022 - Learn Everything from Web Design Fundamentals to Front-End Web Development</small>
@@ -131,7 +131,7 @@
     </div>
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-4.png" alt=""></div>
+            <div><img class="img-fluid w-100" src="images/course/course-4.png" alt=""></div>
             <div class="ps-2 text-start">
             <h5>Digital Marketing A to Z</h5>
             <small>Learn Digital Marketing from A to Z With A Step-By-Step Workbook & Action Plan To Boost Your Career in 2022!</small>
@@ -141,7 +141,7 @@
     </div>
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-5.png" alt=""></div>
+            <div><img class="img-fluid w-100" src="images/course/course-5.png" alt=""></div>
             <div class="ps-2 text-start">
             <h5>Basic of Pofessional Photography</h5>
             <small>The Best Online Professional Photography Class: Learn How to Take Amazing Photos for Beginners & Advanced Photographers.</small>
@@ -151,7 +151,7 @@
     </div>
     <div class="tedu-single-courses col-lg-6 col-12">
         <div class="d-flex flex-column flex-lg-row flex-md-row border rounded">
-            <div><img src="images/course/course-6.png" alt=""></div>
+            <div><img class="img-fluid w-100" src="images/course/course-6.png" alt=""></div>
             <div class="ps-2 text-start">
             <h5>Moton Graphics in After Effects</h5>
             <small>Learn Beginner to Advanced Adobe After Effects CC: Motion Graphics, Kinetic Typography, Visual Effects VFX, Animation+</small>
